Fixed a crash while loading a mask for a clone layer

BUG:317937